plaatnotes: Add sessions controller
